@@ -560,6 +560,12 @@ name|_checkmodified
 init|=
 literal|null
 decl_stmt|;
+specifier|private
+name|boolean
+name|_checkconsistency
+init|=
+literal|true
+decl_stmt|;
 specifier|public
 name|BasicResolver
 parameter_list|()
@@ -1816,6 +1822,11 @@ argument_list|(
 name|md
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_checkconsistency
+condition|)
+block|{
 name|checkDescriptorConsistency
 argument_list|(
 name|mrid
@@ -1837,6 +1848,79 @@ argument_list|,
 name|ivyRef
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|md
+operator|instanceof
+name|DefaultModuleDescriptor
+condition|)
+block|{
+operator|(
+operator|(
+name|DefaultModuleDescriptor
+operator|)
+name|md
+operator|)
+operator|.
+name|setModuleRevisionId
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|mrid
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|,
+name|mrid
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|ivyRef
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Message
+operator|.
+name|warn
+argument_list|(
+literal|"consistency disabled with non default module descriptor... module info can't be updated, so consistency check will be done"
+argument_list|)
+expr_stmt|;
+name|checkDescriptorConsistency
+argument_list|(
+name|mrid
+argument_list|,
+name|md
+argument_list|,
+name|ivyRef
+argument_list|)
+expr_stmt|;
+name|checkDescriptorConsistency
+argument_list|(
+name|systemDd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|,
+name|systemMd
+argument_list|,
+name|ivyRef
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// check if we should delete old artifacts
 name|boolean
 name|deleteOldArtifacts
@@ -4473,6 +4557,28 @@ name|Artifact
 name|artifact
 parameter_list|)
 function_decl|;
+specifier|public
+name|boolean
+name|isCheckconsistency
+parameter_list|()
+block|{
+return|return
+name|_checkconsistency
+return|;
+block|}
+specifier|public
+name|void
+name|setCheckconsistency
+parameter_list|(
+name|boolean
+name|checkConsitency
+parameter_list|)
+block|{
+name|_checkconsistency
+operator|=
+name|checkConsitency
+expr_stmt|;
+block|}
 block|}
 end_class
 
