@@ -1,3 +1,4 @@
+- IMPROVE: adds the possibility to disable concistency check (IVY-163)
 - IMPROVE: add possibility to choose matcher on include exclude and conflict manager rules (IVY-161)
 - IMPROVE: add regexp management in the install ant task (IVY-154)
 
